# cp02-ble

./: .gitignore  .gitmodules  README.md  cp02-ble.ino
docs/: .gitignore
docs/guides/: IonBridge_BLE_Complete_Guide.md  QUICKSTART.md  WEB_INTERFACE_GUIDE.md
hardware/arduino/: README.md  cp02-ble.ino
hardware/esp32/: README.md
software/ble-charging-station/: README.md  app.py  ble_manager.py  glowing_planet_particles.gltf  hot-reload.js  index.html  requirements.txt  script.js  styles.css
software/esp32-ble-gateway/: README.md  TEST_REPORT.md
software/esp32-ble-gateway/backend/: .env.example  app.py  history_store.py  mqtt_client.py  pyproject.toml  requirements.txt  test_api.py
software/esp32-ble-gateway/docker/: Dockerfile.backend  docker-compose.yml
software/esp32-ble-gateway/firmware/: platformio.ini
software/esp32-ble-gateway/firmware/include/: config.h  protocol.h
software/esp32-ble-gateway/firmware/src/: main.cpp  protocol.cpp
software/esp32-ble-gateway/frontend/: cable-config.js  cable-manager.js  index.html  script.js  styles.css
software/python-scripts/: README.md  ble.py  ble_close.py  ble_console.py  ble_unbind.py  check_wifi.py  know.py  reboot_2548.py  set_wifi.py
software/web-controller/ionbridge-ble-controller/: CHANGELOG_v0.0.2.md  README.md  app.py  ble_manager.py  cli_controller.py  protocol.py  requirements.txt
software/web-controller/ionbridge-ble-controller/static/: app.js  index.html  style.css
software/web-controller/ionbridge-ble-controller/tests/: comprehensive_test.py  final_test.py  test_cli.py  test_device.sh  (+4 more)
(+5 files in other folders)
