[project]
name = "esp32-ble-gateway-backend"
version = "1.0.0"
description = "Backend server for ESP32 BLE Gateway - Multi-gateway management for CP02 charging stations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "poboll"}
]
keywords = ["ble", "mqtt", "charging-station", "esp32", "gateway"]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "aiomqtt>=2.0.0",
    "websockets>=11.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
gateway-backend = "app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
